tests/snapshots/options__vanilla_basic@001.snap
---
source: tests/options.rs
description: "input: items [\"1\", \"2\", \"3\"]\noptions: "
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
